2025-09-02T00:52:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17390116925 # 754
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-02
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 912 1391 / 922 1401
* notice: next accum: outdated-unq outdated-all / unq all: 913 1392 / 923 1402
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-19] / [2025-09-01]

2025-09-01T01:01:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17364770207 # 753
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-01
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 909 1388 / 921 1400
* notice: next accum: outdated-unq outdated-all / unq all: 912 1391 / 922 1401
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-17 2025-08-18] / [2025-08-31]

2025-08-30T00:48:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17337188526 # 751
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-30
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 908 1387 / 920 1399
* notice: next accum: outdated-unq outdated-all / unq all: 909 1388 / 921 1400
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-16] / [2025-08-29]

2025-08-29T00:51:34Z: