@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-02T00:52:26Z",
-  "count_outdated" : 1392,
-  "uniques_outdated" : 913,
-  "count" : 1402,
-  "uniques" : 923,
+  "timestamp" : "2025-09-03T00:48:25Z",
+  "count_outdated" : 1393,
+  "uniques_outdated" : 914,
+  "count" : 1403,
+  "uniques" : 924,
   "clones" : [
-    {
-      "timestamp": "2025-08-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-21T00:00:00Z",
       "count": 1,
@@ -79,6 +70,15 @@
     },
     {
       "timestamp": "2025-09-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
