@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-08-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-21T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -44,6 +39,11 @@
     },
     {
       "timestamp": "2025-09-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
